--- a/app/javascript/dashboard/assets/scss/widgets/_reply-box.scss
+++ b/app/javascript/dashboard/assets/scss/widgets/_reply-box.scss
@@ -24,7 +24,7 @@
       left: 0;
 
       max-height: 14rem;
-      overflow: scroll;
+      overflow: auto;
       position: absolute;
       width: 24rem;
       z-index: 100;
